IMPALA-7704: Revert "IMPALA-7644: Hide Parquet page index writing with feature flag"

The fix for IMPALA-7644 introduced ASAN issues detailed in
IMPALA-7704. Reverting for now.

This reverts commit 843683ed6c2ef41c7c25e9fa4af68801dbdd1a78.

Change-Id: Icf0a64d6ec747275e3ecd6e801e054f81095591a
Reviewed-on: http://gerrit.cloudera.org:8080/11671
Tested-by: Impala Public Jenkins <impala-public-jenkins@cloudera.com>
Reviewed-by: Michael Ho <kwho@cloudera.com>